# OmniThing

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  Toolchain-rpi.cmake  buildDeb.sh  install_manifest.txt  jsonToDoc.py  jsonToHeader.py  uploadRepo_rpi.sh
config/: composite_peripherals.json  devices.json  input_bools.json  input_floats.json  input_uints.json  network_receivers.json  network_senders.json  output_bools.json  output_floats.json  output_voids.json  platforms.json
devicetypes/omnithing/child-contactsensor.src/: child-contactsensor.groovy
devicetypes/omnithing/child-dimmerswitch.src/: child-dimmerswitch.groovy
devicetypes/omnithing/child-momentary.src/: child-momentary.groovy
devicetypes/omnithing/child-motionsensor.src/: child-motionsensor.groovy
devicetypes/omnithing/child-relativehumiditymeasurement.src/: child-relativehumiditymeasurement.groovy
devicetypes/omnithing/child-switch.src/: child-switch.groovy
devicetypes/omnithing/child-switchlevel.src/: child-switchlevel.groovy
devicetypes/omnithing/child-temperaturemeasurement.src/: child-temperaturemeasurement.groovy
devicetypes/omnithing/child-voltagemeasurement.src/: child-voltagemeasurement.groovy
devicetypes/omnithing/omni-parent-hubitat.src/: omni-parent-hubitat.groovy
devicetypes/omnithing/omni-parent.src/: omni-parent.groovy
doc/: params.md
example_configs/: blank.json  esp32.h  esp32.json  esp8266.h  esp8266.json  mega.h  pc_example.json  raspberry_pi.json
groovy/: Parent_ST_Anything_Ethernet.groovy  child_ContactSensor.groovy  child_Momentary.groovy  child_Switch.groovy  child_VoltageMeasurement.groovy  omni_parent.groovy
include/: InputBool.h  InputFloat.cpp
include/arduino/: ArduinoJsonConfig.h
include/arduino/lib/: AnalogInputPinArduino.h  DigitalInputPinArduino.h  DigitalOutputPinArduino.h  LoggerSerial.h  NetworkManagerEsp32.h  NetworkManagerEsp8266.h  PwmOutputEsp32.h  ServoArduino.h
include/core/: AnalogInputPin.h  CloudReceiver.h  CompositePeripheral.h  ContactSensor.h  Device.h  DeviceConfig.h  DigitalInputPin.h  DigitalInputPinStub.h  DigitalOutputPin.h  DimmerSwitch.h  FixedArray.h  FloatMeasurement.h  InputBool.h  InputBoolRef.h  InputDebouncer.h  InputFloat.h  InputFloatRef.h  InputUInt.h  InputUIntRef.h  Logger.h  Momentary.h  MotionSensor.h  NetworkReceiver.h  NetworkSender.h  ObjectConfig.h  OmniThing.h  OmniUtil.h  OutputBool.h  OutputBoolToFloat.h  OutputFloat.h  OutputString.h  OutputVoid.h  RelativeHumidityMeasurement.h  Switch.h  SwitchLevel.h  TemperatureMeasurement.h  TimedOutputBool.h  Triggerable.h  TriggerableFunction.h  VoltageMeasurement.h  (+1 more)
include/embedded_common/lib/: AnalogInputPin.h  DhtReader.h  DigitalInputPin.h  DigitalOutputPin.h  PwmOutput.h  ServoMotor.h
include/linux/lib/: NetworkReceiverHttpLib.h
include/os_common/lib/: CommandExecuter.h  CommandExecuterFloat.h  CommandExecuterSwitch.h  CommandParser.h  CommandReturnCode.h  LoggerStdout.h  NetworkReceiverHttpLib.h  NetworkSenderHttpLib.h  OmniOSUtil.h
include/raspberry_pi/lib/: DigitalInputPinRaspberryPi.h  DigitalOutputPinRaspberryPi.h
install/: omnithing-webpage.sh  omnithing-webserver.service  omnithing.service  omnithing.sh  updateConfig.sh
src/: InputBool.cpp
src/ESP32Servo/: ESP32_Servo.cpp  ESP32_Servo.h
src/ESP32WebServer/: ESP32WebServer.cpp  ESP32WebServer.h  Parsing.cpp
src/ESP32WebServer/detail/: RequestHandler.h  RequestHandlersImpl.h
src/arduino/: OmniThing.ino
src/arduino/lib/: AnalogInputPinArduino.cpp  DigitalInputPinArduino.cpp  DigitalOutputPinArduino.cpp  LoggerSerial.cpp  NetworkManagerEsp32.cpp  NetworkManagerEsp8266.cpp  OmniUtil.cpp  PwmOutputEsp32.cpp  ServoArduino.cpp
src/core/: AnalogInputPin.cpp  CompositePeripheral.cpp  ContactSensor.cpp  Device.cpp  DeviceConfig.cpp  DigitalInputPin.cpp  DigitalInputPinStub.cpp  DigitalOutputPin.cpp  DimmerSwitch.cpp  FixedArray.cpp  FloatMeasurement.cpp  InputBoolRef.cpp  InputDebouncer.cpp  InputFloat.cpp  InputFloatRef.cpp  InputUInt.cpp  InputUIntRef.cpp  Logger.cpp  Momentary.cpp  MotionSensor.cpp  NetworkReceiver.cpp  NetworkSender.cpp  ObjectConfig.cpp  OmniThing.cpp  OutputBool.cpp  OutputBoolToFloat.cpp  OutputFloat.cpp  OutputString.cpp  OutputVoid.cpp  RelativeHumidityMeasurement.cpp  Switch.cpp  Switch.h  SwitchLevel.cpp  TemperatureMeasurement.cpp  TimedOutputBool.cpp  Triggerable.cpp  TriggerableFunction.cpp  VoltageMeasurement.cpp  frozen.c  frozen.cpp  (+1 more)
src/embedded_common/lib/: AnalogInputPin.cpp  DhtReader.cpp  DigitalInputPin.cpp  DigitalOutputPin.cpp  PwmOutput.cpp  ServoMotor.cpp
src/linux/: OmniThing.cpp
src/linux/lib/: NetworkReceiverHttpLib.cpp  NetworkSenderHttpLib.cpp  OmniUtil.cpp
src/os_common/: OmniThing.cpp  main_os.cpp
src/os_common/lib/: CommandExecuter.cpp  CommandExecuterFloat.cpp  CommandExecuterSwitch.cpp  CommandParser.cpp  CommandReturnCode.cpp  LoggerStdout.cpp  NetworkReceiverHttpLib.cpp  NetworkSenderHttpLib.cpp  OmniOSUtil.cpp  OmniUtil.cpp
src/raspberry_pi/: OmniThing.cpp
src/raspberry_pi/lib/: DigitalInputPinRaspberryPi.cpp  DigitalOutputPinRaspberryPi.cpp
webpage/: OmniThing.js  config_linux.json  config_rpi.json  config_website.json  jsonToHeader.py  package-lock.json  package.json
webpage/files/: blank_config.json  configuration.css  configuration.html  configuration.js  index.html
